--- a/components/CardBlock/styles.module.css
+++ b/components/CardBlock/styles.module.css
@@ -2,10 +2,15 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    overflow-x: auto;
+    align-items: center;
 }
 
 @media (min-width: 768px) {
     .cardContainer {
         flex-direction: row;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 95%;
     }
 }
