--- a/components/Heading/styles.module.css
+++ b/components/Heading/styles.module.css
@@ -1,4 +1,12 @@
 .h1{
     font-weight: 400;
     font-size: 42px;
+    text-align: center;
+    padding: 0 20px;
+}
+
+@media (min-width: 480px) {
+    .h1{
+        padding-top:100px;
+    }
 }
