--- a/components/IconCard/styles.module.css
+++ b/components/IconCard/styles.module.css
@@ -1,11 +1,11 @@
 .container {
     display: flex;
     align-items: flex-start;
+    min-width: fit-content;
 }
 
 @media (min-width: 768px) {
     .container {
         flex-direction: column;
     }
-
 }
