--- a/components/IconCard/styles.module.css
+++ b/components/IconCard/styles.module.css
@@ -5,7 +5,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.container:hover {
+.container:hover, .container:focus {
     transform: scale(1.1);
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.15);
 }
