--- a/pages/styles.module.css
+++ b/pages/styles.module.css
@@ -2,6 +2,10 @@
     max-width: 100%;
 }
 
+.h1 {
+    font-weight: 400;
+}
+
 @media (min-width: 480px) {
     .container {
         flex-direction: column;
@@ -12,5 +16,9 @@
     .cardBlockContainer {
         display: flex;
         justify-content: center;
+    }
+
+    .h1 {
+        font-size: 42px;
     }
 }
